# EtchFlow

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
cmd/server/: main.go
docs/: EtchFlow_PRD.md  issues.md  plan.md  plan_1.5.md  summary.md
etchflow-py-sdk/: pyproject.toml
etchflow-py-sdk/etchflow/: __init__.py  client.py  graph.py  saver.py  serializer.py  worker.py
examples/: README.md  demo.py  langgraph_demo.py  submit_job.py  worker_demo.py
internal/api/: router.go
internal/api/handler/: checkpoint.go  checkpoints.go  handler.go  health.go  logs.go  ready.go  runs.go  state.go
internal/api/middleware/: logging.go  recovery.go
internal/config/: config.go
internal/models/: checkpoint.go  log.go  run.go
internal/statemachine/: transitions.go
internal/store/: checkpoint_store.go  log_store.go  run_store.go  store.go
internal/worker/: reaper.go  retry_scanner.go
migrations/: 001_create_runs.up.sql  002_create_checkpoints.up.sql  003_create_agent_logs.up.sql  004_add_orchestration_columns.up.sql
python_adapter/: etchflow_checkpoint_saver.py  etchflow_client.py  example_graph.py  graph_serializer.py  requirements.txt
scripts/: kill-test.sh
